--- a/web-application-security/module.yml
+++ b/web-application-security/module.yml
@@ -29,4 +29,4 @@ challenges:
       import:
           dojo: shell-lin-do~148f65dd
           module: other
-          challenge: 41
+          challenge: "41"
