--- a/web-application-security/module.yml
+++ b/web-application-security/module.yml
@@ -2,6 +2,8 @@ name: Web Application Security
 challenges:
     - id: proxy-switcheroo
       name: Ready Player 1337
+    - id: ssti-switcheroo
+      name: Shell's Kitchen
     - id: lecture-shell
       name: Technical Issues
       image: pwmcollege/challenge-lecture
@@ -15,6 +17,4 @@ challenges:
           - name: Challenge
             port: 80
     - id: csp-misconfig
-      name: Secret Whispers
-    - id: ssti-switcheroo
-      name: Shell's Kitchen
+      name: Second to Nonce
